commit file throug Batch

--- a/book.html
+++ b/book.html
@@ -134,14 +134,100 @@
     	<div class="book-form" id="book-form">
     		<h3>可以勾选你需要的图书分类：</h3>
     		<form class="container-fluid">
+    			<span><input type="checkbox" name="book" value="all">全选</span>
 				<span><input type="checkbox" name="book" value="java">Java</span>
 				<span><input type="checkbox" name="book" value="javascript">JavaScript</span>
 				<span><input type="checkbox" name="book" value="html">Html</span>
 				<span><input type="checkbox" name="book" value="python">Python</span>
+				<span><input type="checkbox" name="book" value="go">Go</span>
+				<span><input type="checkbox" name="book" value="algorithm">算法</span>
 				<span><input type="checkbox" name="book" value="thinking">编程思想</span>
 				<span><input type="checkbox" name="book" value="reading">读书</span>				
 			</form>
     	</div>
+    	<hr />
+    	<ul class="book-list">
+    		<li>
+    			<a href="#"><img src="images/book/python-biancheng.png"/></a>
+    			<p>Python编程：从入门到实践</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/python-bianchengkuaisushangshou.png"/></a>
+    			<p>Python编程快速上手——让繁琐的工作自动化</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/python-core-3rd.png"/></a>
+    			<p>Python核心编程，第三版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/liuchangde-python.png"/></a>
+    			<p>流畅的Python</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/html5-quanweizhinan.png"/></a>
+    			<p>HTML5权威指南</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/HTML5andCSS3-jichu-8th.png"/></a>
+    			<p>Html5与CSS3基础教程，第八版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/xiangyingshiweb-2th.png"/></a>
+    			<p>响应式Web设计——Html5和CSS3实战，第二版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/java-bianchengsixiang-4th.png"/></a>
+    			<p>JAVA编程思想，第四版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/java-core-1-9th.png"/></a>
+    			<p>JAVA核心技术，卷1，第九版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/java-core-2-9th.png"/></a>
+    			<p>JAVA核心技术，卷2，第九版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/javascript-quanweizhinan-6th.png"/></a>
+    			<p>JavaScript权威指南，第六版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/nibuzhidaode-js-up.png"/></a>
+    			<p>你不知道的JS，上卷</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/nibuzhidaode-js-mid.png"/></a>
+    			<p>你不知道的JS，中卷</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/goyuyan-biancheng.png"/></a>
+    			<p>GO语言编程</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/suanfa-4th.png"/></a>
+    			<p>算法，第四版</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/ahasuanfa.png"/></a>
+    			<p>啊哈，算法</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/chonggou.png"/></a>
+    			<p>重构，改善既有代码的设计</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src="images/book/tesila.png"/></a>
+    			<p>特斯拉，电气时代的开创者</p>
+    		</li>
+    		<li>
+    			<a href="#"><img src=""/></a>
+    			<p></p>
+    		</li>
+    		<li>
+    			<a href="#"><img src=""/></a>
+    			<p></p>
+    		</li>
+    	</ul>
     </section>
 
   	<!--友言，评论框，不需要的页面可以删除-->
