commit file throug Batch

--- a/book.html
+++ b/book.html
@@ -28,7 +28,8 @@
 
 	<link rel="stylesheet" href="css/index.css" />
 	<link rel="stylesheet" href="css/book.css" />
-
+	<script type="text/javascript" src="js/book.js"></script>
+	
     <!-- Additional fonts for this theme -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -134,15 +135,15 @@
     	<div class="book-form" id="book-form">
     		<h3>可以勾选你需要的图书分类：</h3>
     		<form class="container-fluid">
-    			<span><input type="checkbox" name="book" value="all">全选</span>
-				<span><input type="checkbox" name="book" value="java">Java</span>
-				<span><input type="checkbox" name="book" value="javascript">JavaScript</span>
-				<span><input type="checkbox" name="book" value="html">Html</span>
-				<span><input type="checkbox" name="book" value="python">Python</span>
-				<span><input type="checkbox" name="book" value="go">Go</span>
-				<span><input type="checkbox" name="book" value="algorithm">算法</span>
-				<span><input type="checkbox" name="book" value="thinking">编程思想</span>
-				<span><input type="checkbox" name="book" value="reading">读书</span>				
+    			<span><input type="checkbox" name="book" value="all" id="all">全选</span>
+				<span><input type="checkbox" name="book" value="java" id="java">Java</span>
+				<span><input type="checkbox" name="book" value="javascript" id="javascript"/>JavaScript</span>
+				<span><input type="checkbox" name="book" value="html" id="html">Html</span>
+				<span><input type="checkbox" name="book" value="python" id="python">Python</span>
+				<span><input type="checkbox" name="book" value="go" id="go">Go</span>
+				<span><input type="checkbox" name="book" value="algorithm" id="algorithm">算法</span>
+				<span><input type="checkbox" name="book" value="thinking" id="thinking">编程思想</span>
+				<span><input type="checkbox" name="book" value="reading" id="reading">读书</span>				
 			</form>
     	</div>
     	<hr />
@@ -334,7 +335,14 @@
 
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
-
+    
+    <script type="text/javascript">
+    	if(document.getElementById("all").checked){
+		    alert("all is checked");
+		}
+//  	alert("test");
+    </script>
+    
 </body>
 
 </html>
