--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="一个个人网站，记录一些个人常用信息，笔记，随想……">
+    <meta name="keyword" content="Codeclub, Jackson, Nav, Botebook, study">
+    <meta name="author" content="Jackson">
 
     <title>CodeClub</title>
     <link rel="icon" type="image/x-ico" href="./img/logo.png" />
