commit file throug Batch

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 	<!--百度站长验证代码-->
 	<meta name="baidu-site-verification" content="IhojXiz1uV" />
+    <meta name="baidu-site-verification" content="fc56zoN8Ks" />
 
 	<link rel="stylesheet" href="css/index.css" />
 
