commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -219,6 +219,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://bbs.itheima.com/thread-338488-1-1.html">前端学习路线及资源</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.geeboo.com">藏书馆</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://netcn.console.aliyun.com">阿里云控制台</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://wakatime.com/dashboard">Wakatime</a></li>
                     </ul>
                 </dd>
             </dl>
