commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -253,6 +253,10 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.btdao5.com/">BT岛</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cilisou.cn/">磁力搜</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.btmeet.org/">BTBook</a></li>
+                        <br>
+                        <li><a target="_blank" rel="nofollow" href="http://33mmgg.com/">aql</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://gg66gg.com/">cgjg</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.btmeet.org/">BTBook</a></li>
                     </ul>
                 </dd>
             </dl>
