--- a/nav.html
+++ b/nav.html
@@ -256,7 +256,7 @@
                         <br>
                         <li><a target="_blank" rel="nofollow" href="http://33mmgg.com/">aql</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://gg66gg.com/">cgjg</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.btmeet.org/">BTBook</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://869aaa.com/">备用</a></li>
                     </ul>
                 </dd>
             </dl>
