commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -185,6 +185,7 @@
                         <li><a target="_blank" rel="nofollow" href="https://looly.gitbooks.io/python-basic/" title="零基础学Python">零基础学Python</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/js/js-functions.html" title="菜鸟JS直达">菜鸟JS直达</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/bootstrap/bootstrap-tutorial.html" title="菜鸟Bootstrap直达">菜鸟Bootstrap</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://wiki.jikexueyuan.com/project/fend_note/" title="前端学习笔记">前端学习笔记</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -834,7 +835,7 @@
         <!-- UY END -->
     </section>
 
-	<!-- 来必力City版安装代码 
+	<!-- 来必力City版安装代码
 	<div id="lv-container" data-id="city" data-uid="MTAyMC8yODc2Ni81MzM3">
 		<script type="text/javascript">
 	   (function(d, s) {
