commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -266,6 +266,8 @@
                 <dt class="l">学习</dt>
                 <dd>
                     <ul class="cl">
+                    	
+                    	<li><a target="_blank" rel="nofollow" href="http://blog.csdn.net/u013063153/article/details/52424176#t59" title="前端知识体系">前端知识体系</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.w3school.com.cn/" title="Web 技术教程">w3school</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
