commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -201,7 +201,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.yeah.net" title="网易YEAH">网易YEAH</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.jd.com">京东</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.taobao.com">淘宝</a></li>
-                        <li><a target="_blank" rel="nofollow" href="https://www.dangdang.com">当当</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.dangdang.com">当当</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com">网易云课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
