--- a/nav.html
+++ b/nav.html
@@ -277,8 +277,8 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.icourse163.org/" title="中国大学慕课">中国大学慕课</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课">百度传课</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
-                        <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">待添加</a></li>
-                        <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课" style="display:none">待添加</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">阿里云大学</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
