commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -221,6 +221,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.geeboo.com">藏书馆</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://netcn.console.aliyun.com">阿里云控制台</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://wakatime.com/dashboard">Wakatime</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.toggl.com/">Toggl</a></li>
                     </ul>
                 </dd>
             </dl>
