--- a/nav.html
+++ b/nav.html
@@ -204,10 +204,12 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.dangdang.com">当当</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com">网易云课堂</a></li>
+						<li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com">Gitbook</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com/book/uuie/practical-programming-books/details">Gitbook计算机图书</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
+						<li><a target="_blank" rel="nofollow" href="https://developer.mozilla.org/zh-CN/" title="MDN">MDN</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ituring.com.cn/" title="图灵社区">图灵社区</a></li>
@@ -272,6 +274,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.w3school.com.cn/" title="Web 技术教程">w3school</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://developer.mozilla.org/zh-CN/" title="MDN">MDN</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com" title="廖雪峰官网">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
