commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -209,6 +209,7 @@
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com">Gitbook</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com/book/uuie/practical-programming-books/details">Gitbook计算机图书</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com">菜鸟教程</a></li>
+						<li><a target="_blank" rel="nofollow" href="https://www.shiyanlou.com/" title="实验楼">实验楼</a></li>
 						<li><a target="_blank" rel="nofollow" href="https://developer.mozilla.org/zh-CN/" title="MDN">MDN</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
@@ -283,6 +284,7 @@
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">阿里云大学</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.shiyanlou.com/" title="实验楼">实验楼</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
