--- a/nav.html
+++ b/nav.html
@@ -259,9 +259,8 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.cilisou.cn/">磁力搜</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.btmeet.org/">BTBook</a></li>
                         <br>
-                        <li><a target="_blank" rel="nofollow" href="http://33mmgg.com/">aql</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://gg66gg.com/">cgjg</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.um93.com/html/part/index17.html/">um93</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://gg66gg.com">cgjg</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.um93.com">um93</a></li>
                     </ul>
                 </dd>
             </dl>
