commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -186,6 +186,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/js/js-functions.html" title="菜鸟JS直达">菜鸟JS直达</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com/bootstrap/bootstrap-tutorial.html" title="菜鸟Bootstrap直达">菜鸟Bootstrap</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://wiki.jikexueyuan.com/project/fend_note/" title="前端学习笔记">前端学习笔记</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.pythondoc.com/pythontutorial3/index.html" title="Python3.6官方文档">Python3.6官方文档</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -275,6 +276,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.w3cschool.cn/" title="w3cschool.cn">w3cschool.cn</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.runoob.com" title="菜鸟教程">菜鸟教程</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://developer.mozilla.org/zh-CN/" title="MDN">MDN</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.pythondoc.com/pythontutorial3/index.html" title="Python3.6官方文档">Python3.6官方文档</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com" title="廖雪峰官网">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
