commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -164,8 +164,6 @@
 
         <div class="bk_gray mt-10">
 
-
-
             <dl class="sitelist_1 cl">
                 <dt class="l">笔记暂存</dt>
                 <dd>
@@ -192,13 +190,26 @@
             </dl>
 
             <dl class="sitelist_1 cl">
+                <dt class="l">主页/搜索</dt>
+                <dd>
+                    <ul class="cl">
+                      <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io" title="主页">主页-io</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://search.chongbuluo.com" title="虫部落快搜">虫部落快搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://magnet.chongbuluo.com" title="虫部落资源搜">虫部落资源搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://image.chongbuluo.com" title="虫部落素材搜">虫部落素材搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://scholar.chongbuluo.com" title="虫部落学术搜">虫部落学术搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://bbs.chongbuluo.com" title="虫部落社区">虫部落社区</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <dl class="sitelist_1 cl">
                 <dt class="l">常用网址</dt>
                 <dd>
                     <ul class="cl">
-                        <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io" title="主页">主页-io</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.yeah.net" title="网易YEAH">网易YEAH</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.jd.com">京东</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.taobao.com">淘宝</a></li>
