--- a/wiki/index.html
+++ b/wiki/index.html
@@ -6,12 +6,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="renderer" content="webkit">
-        <title>WiKi</title>
-        <link rel="icon" type="image/x-ico" href="logo.png" />
+        <title>Jackson WiKi</title>
         <link rel="stylesheet" type="text/css" href="amWiki/css/markdownbody.github.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/lhjs.github-gist.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/amWiki.css" />
-        <link rel="stylesheet" type="text/css" href="amWiki/css/jks.css" />
     </head>
 
     <body>
@@ -20,17 +18,14 @@
             <div class="header-inner">
                 <a class="logo" href="?file=首页">
                     <img src="logo.png" /><i></i>
-                    <b>WiKi</b>
-                    <span>V0.1</span>
+                    <b>Jackson WiKi</b>
+                    <span>V1.1</span>
                 </a>
                 <div class="menu-icon" id="menuIcon">
                     <svg>
                         <use xlink:href="#icon:navStart"></use>
                     </svg>
                 </div>
-            </div>
-            <div class="jks-fr">
-              <a href="https://jacksoncode.github.io"><strong>返回JacksonCode</strong></a>
             </div>
         </header>
         <!-- 页面 -->
@@ -211,7 +206,6 @@
         <!-- js -->
         <div class="hidden">
             <script type="text/javascript" src="amWiki/js/gbk.js"></script>
-            <script type="text/javascript" src="amWiki/js/pinyin.js"></script>
             <script type="text/javascript" src="amWiki/js/jquery-compat-3.1.0.min.js"></script>
             <script type="text/javascript" src="amWiki/js/marked.min.js"></script>
             <script type="text/javascript" src="amWiki/js/highlight.min.js"></script>
@@ -224,7 +218,6 @@
             <script src="amWiki/js/amWiki.testing.js"></script>
             <script type="text/javascript" src="amWiki/js/amWiki.scrollbar.js"></script>
             <script type="text/javascript" src="amWiki/js/amWiki.js"></script>
-            
         </div>
         <!-- svg -->
         <div class="hidden" id="svgSymbols"></div>
