commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -258,6 +258,20 @@
             </dl>
 
             <dl class="sitelist_1 cl">
+                <dt class="l">我爱读书</dt>
+                <dd>
+                    <ul class="cl">
+                        <li><a target="_blank" rel="nofollow" href="http://www.write.org.cn" title="读书笔记分享站">读书笔记分享站</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://rubygems.org/">xxxx</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://jekyll.com.cn/">xxxx</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://themes.jekyllrc.org/">xxxx</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://jekyllthemes.org/">xxxx</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.jekyllthemes.io/">xxxx</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <dl class="sitelist_1 cl">
                 <dt class="l">资源</dt>
                 <dd>
                     <ul class="cl">
