--- a/nav.html
+++ b/nav.html
@@ -225,6 +225,8 @@
 						<li><a target="_blank" rel="nofollow" href="https://developer.mozilla.org/zh-CN/" title="MDN">MDN</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.guokr.com/">果壳</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://mooc.guokr.com/">果壳MOOC</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ituring.com.cn/" title="图灵社区">图灵社区</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.epubit.com.cn/" title="异步社区">异步社区</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>
@@ -313,7 +315,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.shiyanlou.com/" title="实验楼">实验楼</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">MOOC学院</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">果壳MOOC学院</a></li><br>
                         <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.miaov.com/data.html.php" title="前端培训">妙味课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.hubwiz.com/" title="汇智网">汇智网</a></li>
