commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -195,7 +195,16 @@
                     <ul class="cl">
                       <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io" title="主页">主页-io</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.dida365.com" title="滴答清单">滴答清单</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.bookzz.org" title="BookZZ">BookZZ</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://gen.lib.rus.ec" title="Library Genesis">Library Genesis</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://kindbook.cn" title="益书网">益书网</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://search.chongbuluo.com" title="虫部落快搜">虫部落快搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://magnet.chongbuluo.com" title="虫部落资源搜">虫部落资源搜</a></li>
