commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -199,13 +199,11 @@
                       <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.bookzz.org" title="BookZZ">BookZZ</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://gen.lib.rus.ec" title="Library Genesis">Library Genesis</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://kindbook.cn" title="益书网">益书网</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://mebook.cc/" title="我的读书小屋">我的读书小屋</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">xxxx</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">xxxx</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://search.chongbuluo.com" title="虫部落快搜">虫部落快搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://magnet.chongbuluo.com" title="虫部落资源搜">虫部落资源搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://image.chongbuluo.com" title="虫部落素材搜">虫部落素材搜</a></li>
