commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -223,7 +223,8 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.dangdang.com">当当</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com">网易云课堂</a></li>
-						<li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
+						            <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
+						            <li><a target="_blank" rel="nofollow" href="https://www.coursera.org/" title="coursera">coursera</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://github.com">Github</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com">Gitbook</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.gitbook.com/book/uuie/practical-programming-books/details">Gitbook计算机图书</a></li>
@@ -320,7 +321,9 @@
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">阿里云大学</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.coursera.org/" title="coursera">coursera</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.shiyanlou.com/" title="实验楼">实验楼</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://code.py40.com/" title="Python在线">Python在线</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.xuetangx.com/" title="学堂在线">学堂在线</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://mooc.guokr.com/" title="果壳网旗下 慕课学习社区">果壳MOOC学院</a></li><br>
                         <li><a target="_blank" rel="nofollow" href="http://aibusy.com/" title="Busy前端工作室">Busy前端工作室</a></li>
