--- a/nav.html
+++ b/nav.html
@@ -285,6 +285,7 @@
                 <dt class="l">资源</dt>
                 <dd>
                     <ul class="cl">
+                        <li><a target="_blank" rel="nofollow" href="https://mirrors.tuna.tsinghua.edu.cn/help/anaconda/" title="清华镜像">清华镜像</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ttmeiju.com" title="天天美剧">天天美剧</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cnscg.com/" title="JacksonCode">圣城家园</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
