commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -197,6 +197,7 @@
                       <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.dida365.com" title="滴答清单">滴答清单</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.bing.com" title="Bing">Bing</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
