commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -319,7 +319,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://study.163.com" title="网易云课堂">网易云课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.icourse163.org/" title="中国大学慕课">中国大学慕课</a></li>
-                        <li><a target="_blank" rel="nofollow" href="https://chuanke.baidu.com/" title="百度传课">百度传课</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://open.163.com/" title="网易公开课">网易公开课</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">阿里云大学</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
