commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -301,6 +301,7 @@
                         <br>
                         <li><a target="_blank" rel="nofollow" href="http://gg66gg.com">cgjg</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://636zzz.com/">1111</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://zzz767.com/">1111</a></li>
                     </ul>
                 </dd>
             </dl>
